--- a/.babelrc
+++ b/.babelrc
@@ -1,13 +1,18 @@
 {
     "plugins": [
-      ["module-resolver", {
-        "root": ["./src"],
-        "alias": {
-          "components" : "./components",
-          "styles" : "./styles",
-          "utils" : "./utils",
-          "hooks" : "./hooks"
-        }
-      }]
+        [
+            "module-resolver",
+            {
+                "root": ["./src"],
+                "alias": {
+                    "components": "./components",
+                    "utils": "./utils",
+                    "hooks": "./hooks",
+                    "pages": "./pages",
+                    "store": "./store",
+                    "styles": "./styles"
+                }
+            }
+        ]
     ]
 }
