--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
         "react-router-dom": "^5.3.0",
         "react-scripts": "4.0.3",
         "redux": "^4.1.1",
+        "redux-thunk": "^2.3.0",
+        "styled-components": "^5.3.1",
         "web-vitals": "^1.0.1"
     },
     "scripts": {
-        "start": "craco start",
-        "build": "craco build",
-        "test": "craco test",
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test",
         "lint": "eslint --fix .",
         "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc",
         "eject": "react-scripts eject"
@@ -52,7 +54,6 @@
         "eslint-plugin-react": "^7.26.1",
         "eslint-plugin-react-hooks": "^4.2.0",
         "postcss": "^7.0.39",
-        "prettier": "^2.4.1",
-        "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17"
+        "prettier": "^2.4.1"
     }
 }
