--- a/package.json
+++ b/package.json
@@ -48,6 +48,10 @@
         "babel-plugin-module-resolver": "^4.1.0",
         "eslint": "^7.32.0",
         "eslint-config-prettier": "^8.3.0",
+        "eslint-config-react-app": "^5.2.1",
+        "eslint-loader": "^3.0.3",
+        "eslint-plugin-flowtype": "^4.6.0",
+        "eslint-plugin-import": "^2.20.1",
         "eslint-plugin-jsx-a11y": "^6.4.1",
         "eslint-plugin-prettier": "^4.0.0",
         "eslint-plugin-react": "^7.26.1",
