--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -24,7 +24,7 @@ jobs:
                   node-version: ${{ matrix.node-version }}
 
             - name: Install application dependencies.
-              run: npm i
+              run: npm ci
 
             - name: Build the application.
               run: npm run build --if-present
